columns overflow fix

--- a/src/scss/block/link.scss
+++ b/src/scss/block/link.scss
@@ -3,13 +3,12 @@
 .blocks {
 	.block.blockLink { white-space: nowrap; }
 	.block.blockLink {
+		.name { display: inline-block; vertical-align: top; max-width: calc(100% - 30px); cursor: pointer; position: relative; }
 		.name {
-			display: inline; vertical-align: top; letter-spacing: 0.1px; max-width: calc(100% - 30px);
-			cursor: pointer; @include text-overflow-nw; position: relative;
-		}
-		.name::after {
-			content: ""; width: 100%; height: 0px; border-bottom: 1px solid $colorDarkGrey; transition: $transitionFast;
-			position: absolute; bottom: 0px; left: 0px; z-index: 1;
+			.txt { 
+				box-shadow: 0px -1px 0px $colorDarkGrey inset; transition: $transitionFast; line-height: inherit; vertical-align: top; 
+				@include text-overflow-nw; width: 100%;
+			}
 		}
 		.smile { margin-right: 6px; }
 		
@@ -19,7 +18,7 @@
 		}
 	}
 	.block.blockLink:hover {
-		.name::after { border-color: $colorBlack; }
+		.name .txt { border-color: $colorBlack; }
 	}
 	
 	.block.blockLink > .wrapContent > .selectable > .dropTarget { padding: 3px 0px; }
